git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "0a70add"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "0a70add"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/perl6/doc/lib/Language/5to6-perlop.pod
+++ b/perl6/doc/lib/Language/5to6-perlop.pod
@@ -199,7 +199,7 @@ specifically documented.
 =head2 Comma Operator
 
 The comma operator works mostly as expected, but technically it creates
-Parcels (see L<http://doc.perl6.org/type/Parcel>) or separates arguments
+L<Lists|/type/List>) or separates arguments
 in function calls. Also, there is a C<:> variant that turns function
 calls into method calls - see
 L<http://doc.perl6.org/language/operators#infix_%3A>.
