--- a/perl6/doc/lib/Language/containers.pod
+++ b/perl6/doc/lib/Language/containers.pod
@@ -113,14 +113,13 @@ signature parameter marked as C<is rw>.
 =head2 Scalar containers and listy things
 
 There are a number of positional container types with slightly different
-semantics in Perl 6. The most basic one is I<Parcel>, short for
-I<Parenthesis cell>. It is created by the comma operator and often delimited
-by round parentheses -- hence the name.
+semantics in Perl 6. The most basic one is L<List|/type/List>
+It is created by the comma operator.
 
-    say (1, 2, 3).WHAT;     # (Parcel)
+    say (1, 2, 3).WHAT;     # (List)
 
-A parcel is immutable, which means you cannot change the number of elements
-in a parcel. But if one of the elements happens to be a scalar container,
+A list is immutable, which means you cannot change the number of elements
+in a list. But if one of the elements happens to be a scalar container,
 you can still assign to it:
 
     my $x = 42;
@@ -128,23 +127,25 @@ you can still assign to it:
     say $x;                 # 23
     ($x, 1, 2)[1] = 23;     # Error: Cannot modify an immutable value
 
-So the parcel doesn't care about whether its elements are values or
+So the list doesn't care about whether its elements are values or
 containers, they just store and retrieve whatever was given to them.
 
-A C<List> has the same attitude of indifference towards containers. But it
-allows modifying the length (for example with C<push>, C<pop>, C<shift> and
-C<unshift>), and it is also lazy.
+Lists can also be lazy, so elements at the end are generated on demand from an
+iterator.
 
 An C<Array> is just like a list, except that it forces all its elements to
-be containers. Thus you can say
+be containers, which means that you can always assign to elements:
 
     my @a = 1, 2, 3;
     @a[0] = 42;
     say @a;         # 42 2 3
 
-and C<@a> actually stores three scalar containers. C<@a[0]> returns one of
+C<@a> actually stores three scalar containers. C<@a[0]> returns one of
 them, and the assignment operator replaces the integer value stored in that
 container with the new one, C<42>.
+
+An L<Array> also has methods that can change the number of elements, notably
+C<push>, C<pop>, C<shift>, C<unshift> and C<splice>.
 
 =head2 Assigning and binding to array variables
 
@@ -162,7 +163,7 @@ makes no such effort.
 To place a non-C<Array> into an array variable, binding works:
 
     my @a := (1, 2, 3);
-    say @a.WHAT;                # (Parcel)
+    say @a.WHAT;                # (List)
 
 =head2 Binding to array elements
 
@@ -241,7 +242,7 @@ container:
       @b = @($item), 4, 5;      # a shortcut
       @b = @$item, 4, 5;        # another shortcut
 
-Other methods on lists also return flat lists/parcels, so for example
+Other methods on lists also return flat lists, so for example
 
    my $item = [1, 2, 3];
    my @b = $item.sort, 4, 5;    # 5 elems
@@ -327,7 +328,7 @@ And a few that don't flatten:
 =item .tree
 
 The first two cannot flatten, otherwise it would be very hard to get access
-to the structure that's actually stored in the list or parcel and the whole
+to the structure that's actually stored in the list and the whole
 point of C<.tree> is not to flatten.
 
 =end pod
