--- a/perl6/doc/lib/Language/control.pod
+++ b/perl6/doc/lib/Language/control.pod
@@ -240,7 +240,49 @@ example because it is not caught up to this part of the design yet.
 
 =head2 for
 
-=comment TODO
+The C<for> loop iterates over a list.
+
+=begin code
+
+for @foo {.print}
+
+=end code
+
+Use pointy block syntax to get an iteration variable.
+
+=begin code
+
+for @foo -> $item { print $item }
+
+=end code
+
+Multiple parameters can be declared.
+
+=begin code
+
+for %hash.kv -> $key, $value { print "$key => $value\n" }
+
+=end code
+
+The list in a C<for> loop is evaluated lazily by default, so to read a file
+line by line, you could use
+
+=begin code
+
+for $*IN.lines -> $line {...}
+
+=end code
+
+Iteration variables are always lexical, so you don't need to use C<my> to give
+them the appropriate scope. Also, they are read-only aliases. If you need them
+to be read-write, use C«<->» instead of C«->». If you need to make C<$_>
+read-write in a for loop, do so explicitly.
+
+=begin code
+
+for @cars <-> $_ {...}
+
+=end code
 
 =head2 gather/take
 
