--- a/perl6/doc/lib/Language/nativecall.pod
+++ b/perl6/doc/lib/Language/nativecall.pod
@@ -61,6 +61,7 @@ likely grow with time).
     int8           (char in C)
     int16          (short in C)
     int32          (int in C)
+    int64          (64-bit int in C)
     long           (32- or 64-bit, depends what long means locally)
     longlong       (at least 64bits, what long long means locally)
     num32          (float in C)
