--- a/perl6/doc/lib/Language/objects.pod
+++ b/perl6/doc/lib/Language/objects.pod
@@ -319,7 +319,7 @@ order|https://en.wikipedia.org/wiki/C3_linearization>.  You can ask a type
 for its MRO through a call to its meta class:
 
 =for code :allow<B L>
-say ParcelB<.^L<mro>>;    # Parcel() Cool() Any() Mu()
+say List<.^L<mro>>;      # List() Cool() Any() Mu()
 
 If a class does not specify a parent class, L<Any> is assumed by default.
 All classes directly or indirectly derive from L<Mu>, the root of the type
