--- a/perl6/doc/lib/Language/operators.pod
+++ b/perl6/doc/lib/Language/operators.pod
@@ -112,19 +112,17 @@ L</language/functions#Defining_Operators>.
 =head2 circumfix C«< >»
 
 The quote-words construct. Breaks up the contents on whitespace, and returns
-a C<Parcel> of the words. If a word
+a L<List|/type/List> of the words. If a word
 looks like a number literal or a C<Pair> literal, it is converted to the
 appropriate number.
 
     say <a b c>[1];     # b
 
-(Rakudo currently always returns a parcel of strings).
-
 =head2 circumfix C«( )»
 
 The grouping operator.
 
-An empty group C<()> creates an empty L<Parcel>.
+An empty group C<()> creates an empty L<List>.
 Parens around non-empty expressions simply structure the expression, but
 not have additional semantics.
 
@@ -271,15 +269,15 @@ Technically this is not an operator, but syntax special-cased in the compiler.
 =head2 postfix C«.+»
 
 C<$invocant.+method> calls all methods called C<method> from C<$invocant>,
-and returns a L<Parcel> of the results. Dies if no such method was found.
+and returns a L<List> of the results. Dies if no such method was found.
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
 =head2 postfix C«.*»
 
 C<$invocant.*method> calls all methods called C<method> from C<$invocant>,
-and returns a L<Parcel> of the results. If no such method was found, an empty
-L<Parcel> is returned.
+and returns a L<List> of the results. If no such method was found, an empty
+L<List> is returned.
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
@@ -470,12 +468,11 @@ Coerces the argument to L<Str> by calling the C<Str> method on it.
 
 =head2 prefix C«|»
 
-Flattens objects of type L<Capture>, L<Enum>, L<Pair>, L<List>, L<Parcel>,
+Flattens objects of type L<Capture>, L<Enum>, L<Pair>, L<List>
 L<EnumMap> and L<Hash> into an argument list.
 
-(In Rakudo, this is implemented not as a proper operator but as a special
-case in the compiler, which means it only works in argument lists, not in
-arbitrary code).
+Outside of argument lists, it returns a L<Slip|/type/Slip>, which makes it
+flatten into the outer list.
 
 =head2 prefix C«+^»
 
@@ -1343,9 +1340,9 @@ and returns the result.
 
 =head2 infix C«,»
 
-    sub infix:<,>(*@a) is assoc<list> returns Parcel:D
+    sub infix:<,>(*@a) is assoc<list> returns List:D
 
-Constructs a L<Parcel> from its arguments. Also used syntactically as the
+Constructs a L<List> from its arguments. Also used syntactically as the
 separator of arguments in calls.
 
 =head2 infix C«:»
@@ -1373,7 +1370,7 @@ the first input list is exhausted:
     say (1, 2 Z <a b c> Z <+ ->).perl;  # ((1, "a", "+"), (2, "b", "-")).list
 
 The C<Z> operator also exists as a meta operator, in which case the inner
-parcels are replaced by the value from applying the meta'ed operator to the
+lists are replaced by the value from applying the meta'ed operator to the
 list:
 
     say 100, 200 Z+ 42, 23;             # 142, 223
@@ -1392,7 +1389,7 @@ elements vary most rapidly
                  (3, 'a', 9), (3, 'b', 9), (3, 'c', 9)
 
 The C<X> operator also exists as a meta operator, in which case the inner
-parcels are replaced by the value from applying the meta'ed operator to the
+lists are replaced by the value from applying the meta'ed operator to the
 list:
 
     1..3 X~ <a b c> X~ 9
