--- a/perl6/doc/lib/Language/setbagmix.pod
+++ b/perl6/doc/lib/Language/setbagmix.pod
@@ -84,7 +84,7 @@ equivalent ASCII version (like L<C<(elem)>|(elem)> or L<C<(|)>|(|)>).
 Most of the time, explicitly using C<Set> objects with these infixes is
 unnecessary. All of the infix operators will work on any objects of type
 L<C<Any>|Any> for its arguments (e.g., L<C<List>s|List>,
-L<C<Parcel>s|Parcel>, L<C<Mix>es|Mix>, etc.) and coerce them to C<Set>s
+L<C<Array>s|Array>, L<C<Mix>es|Mix>, etc.) and coerce them to C<Set>s
 where needed.
 
 In some cases, if the type of an argument is a L<Bag>, the infix operator
