--- a/perl6/doc/lib/Language/variables.pod
+++ b/perl6/doc/lib/Language/variables.pod
@@ -63,7 +63,7 @@ seen in the current expression or declarator:
     say @bar.perl;          # [7, 9]<>
 
     (my $baz) = 11, 13;     # list assignment
-    say $baz.WHAT;          # Parcel
+    say $baz.WHAT;          # (List)
     say $baz.perl;          # (11, 13)
 
 Thus, the behavior of an assignment contained within a list assignment depends
@@ -90,7 +90,7 @@ expression determines the type of assignment:
     my ( @foo, $bar );
     @foo = ($bar) = 42, "str";       # list assignment: uses parens
     say @foo.perl;                   # [42, "str"]<> (an Array)
-    say $bar.perl;                   # $(42, "str")  (a Parcel)
+    say $bar.perl;                   # $(42, "str")  (a List)
 
 However, if the internal assignment is neither a declarator nor an
 expression, but is part of a larger expression, the context of the
