--- a/perl6/doc/lib/Type/Numeric.pod
+++ b/perl6/doc/lib/Type/Numeric.pod
@@ -133,13 +133,13 @@ Returns C<False> if the number is equivalent to zero, and C<True> otherwise.
 
 =head2 method succ
 
-    method succ(Numerid:D:)
+    method succ(Numeric:D:)
 
 Returns the number incremented by one (successor).
 
 =head2 method pred
 
-    method pred(Numerid:D:)
+    method pred(Numeric:D:)
 
 Returns the number decremented by one (predecessor).
 
