--- a/perl6/doc/lib/Type/Pair.pod
+++ b/perl6/doc/lib/Type/Pair.pod
@@ -64,9 +64,9 @@ For more about format strings, see L<sprintf>.
 
 =head2 method kv
 
-    multi method kv(Pair:D:) returns Parcel:D
+    multi method kv(Pair:D:) returns List:D
 
-Returns a two-element C<Parcel> with the I<key> and I<value> parts of
+Returns a two-element C<List> with the I<key> and I<value> parts of
 C<Pair>, in that order. This method is a special case of the same-named
 method on C<Hash>, which returns all its entries as a list of keys and
 values.
