--- a/perl6/doc/lib/Type/Parameter.pod
+++ b/perl6/doc/lib/Type/Parameter.pod
@@ -53,17 +53,17 @@ Returns C<True> for slurpy parameters.
 
 Returns C<True> for optional parameters.
 
-=head2 method parcel
+=head2 method raw
 
-Returns C<True> for parcel parameters.
+Returns C<True> for raw parameters.
 
-    sub f(\$parcel) {
-        $parcel = 5;
+    sub f(\$raw) {
+        $raw = 5;
     }
     f(my $x);   # works
     f(42);      # dies in the assignment
 
-Parcel parameters bind either a variable or a value passed to it, with
+Raw parameters bind either a variable or a value passed to it, with
 no decontainerization taking place.  That means that if a variable was passed
 to it, you can assign to the parameter. This is different from
 L<rw|#rw>-parameter which can only bind to variables, never to values.
