--- a/perl6/doc/lib/Type/Supply.pod
+++ b/perl6/doc/lib/Type/Supply.pod
@@ -455,7 +455,7 @@ be called as a class method.
     method zip(Supply @*supplies, :&with = &[,]) returns Supply:D
 
 Creates a supply that emits combined values as soon as there is a new value
-seen on B<all> of the supplies.  By default, C<Parcels|/type/Parcel> are
+seen on B<all> of the supplies.  By default, C<Lists|/type/List> are
 created, but this can be changed by specifying your own combiner with the
 :with parameter.  The resulting supply is done as soon as B<any> of the given
 supplies are done.  Can also be called as a class method.
@@ -465,7 +465,7 @@ supplies are done.  Can also be called as a class method.
     method zip(Supply @*supplies, :&with = &[,], :$initial) returns Supply:D
 
 Creates a supply that emits combined values as soon as there is a new value
-seen on B<any> of the supplies.  By default, C<Parcels|/type/Parcel> are
+seen on B<any> of the supplies.  By default, C<Lists|/type/List> are
 created, but this can be changed by specifing your own combiner with the
 :with parameter.  The optional :initial parameter can be used to indicate
 the inital state of the combined values.  By default, all supplies have to
