--- a/perl6/doc/lib/Type/Whatever.pod
+++ b/perl6/doc/lib/Type/Whatever.pod
@@ -38,7 +38,7 @@ a C<Whatever> object.
 
     Exception           Example     What it does
     =========           =======     ============
-    comma               1, *, 2     generates a Parcel with a * element
+    comma               1, *, 2     generates a List with a * element
     range operators     1..*        Range.new(:from(1), :to(*));
     series operator     1 ... *     infinite list
     smart-matching      1 ~~ *      returns True
