--- a/perl6/doc/lib/Language/terms.pod
+++ b/perl6/doc/lib/Language/terms.pod
@@ -90,7 +90,7 @@ the C<:!identifier> form is C<Bool::False>.
 If used in an argument list, all of these forms count as named arguments,
 with the exception of C<< 'quoted string' => $value >>.
 
-=head2 Parcel
+=head2 List
 
     ()
     1, 2, 3
@@ -98,7 +98,7 @@ with the exception of C<< 'quoted string' => $value >>.
     «a b c»
     qw/a b c/
 
-L<Parcel> literals are: the empty pair of parens C<()>, a comma-separated
+L<List> literals are: the empty pair of parens C<()>, a comma-separated
 list, or several quoting constructs.
 
 =head2 term *
