--- a/perl6/doc/lib/Type/Cool.pod
+++ b/perl6/doc/lib/Type/Cool.pod
@@ -20,8 +20,8 @@ C<Int> converts the integer to C<Str> first.
 The following built-in types inherit from C<Cool>:
 L<Array> L<Backtrace> L<Bag> L<Baggy> L<Bool> L<Complex> L<Cool>
 L<Duration> L<Enumeration> L<EnumMap> L<FatRat> L<Hash> L<Instant>
-L<Int> L<Iterable> L<Iterator> L<KeyHash> L<KeySet> L<List>
-L<ListIter> L<LoL> L<MapIter> L<Nil> L<Num> L<Numeric> L<Parcel>
+L<Int> L<KeyHash> L<KeySet> L<List>
+L<Nil> L<Num> L<Numeric>
 L<Range> L<Real> L<Seq> L<Set> L<Stash> L<Str> L<Stringy>
 
 The following table summarizes the methods that C<Cool> provides, and
