--- a/perl6/doc/lib/Type/List.pod
+++ b/perl6/doc/lib/Type/List.pod
@@ -17,7 +17,7 @@ Arrays to have every value of the list stored in a container.
 
 In Perl 6, assigning a C<List> to a scalar variable does not lose
 information. The difference is that iteration generally treats a
-list (or any other list-like object, like a C<Parcel> or an C<Array>)
+list (or any other list-like object, like a L<Seq> or an L<Array>)
 inside a scalar as a single element.
 
     my @a = 1, 2, 3;
@@ -130,7 +130,7 @@ C<map> inspects the arity of the code object, and tries to pass as many argument
 
 iterates the list two items at a time.
 
-Note that C<map> does not flatten embedded lists and parcels, so
+Note that C<map> does not flatten embedded lists and array, so
 
     ((1, 2), <a b>).map({ .join(',')})
 
@@ -143,7 +143,7 @@ passes C<(1, 2)> and C<< <a b> >> in turn to the block, leading to a total of tw
 Like C<map> iterates over the elements of the invocant list, feeding each
 element in turn to the code reference, and assembling the return values from these invocations in a result list.
 
-Unlike C<map> it flattens non-itemized lists and parcels, so
+Unlike C<map> it flattens non-itemized lists and arrays, so
 
     say ((1, 2), <a b>).flatmap(&uc).join('|');     # 1|2|A|B
 
@@ -423,66 +423,6 @@ Example:
     say @foo.splice(2, 3, <M N O P>);       # c d e
     say @foo;                               # a b M N O P f g
 
-=head2 routine pop
-
-    multi sub    pop(List:D )
-    multi method pop(List:D:)
-
-Removes and returns the last item from the list, fails for an empty list.
-
-Example:
-
-    > my @foo = <a b>;
-    a b
-    > @foo.pop;
-    b
-    > pop @foo
-    a
-    > pop @foo
-    Element popped from empty list
-
-=head2 routine push
-
-    multi sub    push(List:D, *@values) returns List:D
-    multi method push(List:D: *@values) returns List:D
-
-Adds the C<@values> to the end of the list, and returns the modified list.
-Fails for infinite lists.
-
-Example:
-
-    my @foo = <a b c>;
-    @foo.push: 1, 3 ... 11;
-    say @foo;                   # a b c 1 3 5 7 9 11
-
-=head2 routine shift
-
-    multi sub    shift(List:D )
-    multi method shift(List:D:)
-
-Removes and returns the first item from the list. Fails for an empty list.
-
-Example:
-
-    my @foo = <a b>;
-    say @foo.shift;     # a
-    say @foo.shift;     # b
-    say @foo.shift;     # Element shifted from empty list
-
-=head2 routine unshift
-
-    multi sub    unshift(List:D, *@values) returns List:D
-    multi method unshift(List:D: *@values) returns List:D
-
-Adds the C<@values> to the start of the list, and returns the modified list.
-Fails if C<@values> is infinite.
-
-Example:
-
-    my @foo = <a b c>;
-    @foo.unshift: 1, 3 ... 11;
-    say @foo;                   # 1 3 5 7 9 11 a b c
-
 =head2 routine combinations
 
     multi method combinations (List:D: Int:D $of)          returns List:D
@@ -619,16 +559,18 @@ assigning it:
 
 =head2 routine zip
 
-    sub zip(List:D:, List:D:, ...) returns List:D
+    sub zip(List:D:, List:D:, ...) returns Seq:D
 
 Zip two or more lists together by interleaving their elements.  If the lists
 have different lengths, then the lists are zipped to the length of the
 shortest list; elements of the longer list(s) are discarded.
 
 In order to support parallel iteration over multiple arrays, Perl 6
-has a C<zip> function that builds a list of C<Parcel> objects from the
+has a C<zip> function that builds a list of C<List> objects from the
 elements of two or more arrays.  In ordinary list context this behaves
 as a list of C<Captures> and automatically flattens.
+
+=comment TODO: GLR
 
     for zip(@names; @codes) -> $name, $zip {
         say "Name: $name;   Zip code: $zip";
@@ -656,7 +598,7 @@ skip missing entries, use L<roundrobin|/type/List#sub_roundrobin> instead:
 
 =head2 sub roundrobin
 
-    multi roundrobin(List:D: --> Parcel)
+    multi roundrobin(List:D: --> Seq)
 
 C<roundrobin> is very similar to L<zip|/type/List#routine_zip>.  The
 difference is that C<roundrobin> will not stop on lists that run out of
