--- a/ugexe/zef/README.pod
+++ b/ugexe/zef/README.pod
@@ -4,7 +4,7 @@
 
 =head2 Name
 
-Zef - Perl6 Module Management (GLR compatible)
+Zef - Perl6 Module Management
 
 =for HTML <a href="https://travis-ci.org/ugexe/zef"><img src="https://travis-ci.org/ugexe/zef.svg?branch=master"></a>
 
@@ -18,30 +18,8 @@ Be sure your `PATH` includes the file path shown by the command below:
 
     $ perl6 -e "say %*CUSTOM_LIB<site>.IO.child('bin').Str"
     # example: /home/perl6/install/share/perl6/site/bin
-    
-=head1 DESCRIPTION
-
-Zef is a package manager for Perl6. It works with MoarVM and JVM on Windows, Linux, OSX, and other BSD derivatives.
-
-=head3 Features
-
-=over 2
-
-=item * Optonal parallelization of precompilation and testing phases for quicker installs and CI results.
-
-=item * Complete HTTP grammar based on RFC7230-7235 (and others).
-
-=item * Zef::Net::HTTP::Client - a HTTP client based on included HTTP grammars.
-
-=item * CompUnitRepo based installs - uses rakudo's built in installer, letting the code focus on package management.
-
-=item * A `hooks` implementation as mentioned in L<S22|http://design.perl6.org/S22.html#hooks>, allowing module authors to even implement the entire build/test/install process without needing a package manager at all.
-
-=back
 
 =head1 USAGE
-
-=head1 The CLI
 
     # duh
     zef -v install CSV::Parser
@@ -71,7 +49,7 @@ Zef is a package manager for Perl6. It works with MoarVM and JVM on Windows, Lin
     zef -v look CSV::Parser
 
     # build/test/install all modules in the ecosystem
-    zef -v smoke
+    zef -v --report smoke
 
 =head2 More CLI
 
@@ -85,8 +63,8 @@ Fetch, build, test, optional report, and install.
     # send a test report
     --report
 
-    # parallel testing and precompilation
-    --async
+    # parallel testing and precompilation (max processes/threads)
+    --jobs=2
 
     # cut off lines that reach (our guess at) the term width in columns
     --no-wrap
@@ -116,41 +94,38 @@ Fetch, build, test, optional report, and install.
     --force
 
     # livin that multi thread life
-    zef -v --report --async install HTTP::Server::Threaded
+    zef -v --report --jobs=4 install HTTP::Server::Threaded
     
 B<Example>: (note parallelized output format will be improved)
-    
-    $ zef -v install CSV::Parser P6TCI
-    ===> Querying Authority [done]
+
+    $ zef -v --jobs=2 install CSV::Parser
+    Initializing
+    ===> Module count: 364
+    ===> Filtered module count: 364
+    ===> Package file: /tmp/p6c-packages.1441864140.72.json
+    ===> Attempting to update via `git pull`
     ===> Fetching [done]
-    ===> Fetching OK for: CSV::Parser P6TCI
-    ===> META.info availability OK for: CSV::Parser P6TCI
-    ===> Build directory: /tmp/CSV--Parser/blib
-    Parser.pm # perl6 -I/tmp/CSV--Parser/blib/lib -I/tmp/CSV--Parser/lib -I/tmp/CSV--Parser/lib --target=mbc --output=/tmp/CSV--Parser/blib/lib/CSV/Parser.pm.moarvm lib/CSV/Parser.pm
-    ===> Build directory: /tmp/P6TCI/blib
-    P6TCI.pm6 # perl6 -I/tmp/P6TCI/blib/lib -I/tmp/P6TCI/lib -I/tmp/P6TCI/lib --target=mbc --output=/tmp/P6TCI/blib/lib/P6TCI.pm6.moarvm lib/P6TCI.pm6
-    ===> Building [done]
-    ===> Build OK for: lib/CSV/Parser.pm lib/P6TCI.pm6
+    ===> Fetching OK for: CSV::Parser
+    ===> META.info availability OK for: CSV::Parser
+    Parser.pm # perl6 -Iblib/lib -Ilib --target=mbc --output=blib/lib/CSV/Parser.pm.moarvm lib/CSV/Parser.pm
+    ===> Precompiling [done]
+    ===> Precompiling OK for: Parser.pm
     01_multiline_csv.t  # perl6 --ll-exception -Iblib/lib -Ilib t/01_multiline_csv.t
+    02_escaped_csv.t    # perl6 --ll-exception -Iblib/lib -Ilib t/02_escaped_csv.t
     01_multiline_csv.t  # 1..1
     01_multiline_csv.t  # ok 1 -
-    02_escaped_csv.t    # perl6 --ll-exception -Iblib/lib  -Ilib t/02_escaped_csv.t
+    03_delimiters_csv.t # perl6 --ll-exception -Iblib/lib -Ilib t/03_delimiters_csv.t
     02_escaped_csv.t    # 1..1
     02_escaped_csv.t    # ok 1 -
-    03_delimiters_csv.t # perl6 --ll-exception -Iblib/lib -Ilib t/03_delimiters_csv.t
+    04_binary_csv.t     # perl6 --ll-exception -Iblib/lib -Ilib t/04_binary_csv.t
     03_delimiters_csv.t # 1..1
     03_delimiters_csv.t # ok 1 -
-    04_binary_csv.t     # perl6 --ll-exception -Iblib/lib -Ilib t/04_binary_csv.t
     04_binary_csv.t     # 1..1
     04_binary_csv.t     # ok 1 -
-    00-load.t           # perl6 --ll-exception -Iblib/lib -Ilib t/00-load.t
-    00-load.t           # ok 1 - Module loaded.
-    00-load.t           # 1..1
     ===> Testing [done]
-    ===> Testing OK for: 01_multiline_csv.t 02_escaped_csv.t 03_delimiters_csv.t 04_binary_csv.t 00-load.t
+    ===> Testing OK for: 01_multiline_csv.t 02_escaped_csv.t 03_delimiters_csv.t 04_binary_csv.t
     ===> Installing [done]
-    ===> Install OK for: CSV::Parser P6TCI
-
+    ===> Install OK for: CSV::Parser
 
 =head4 B<smoke>
 
@@ -278,6 +253,10 @@ Due to a bug in L<Test.pm|https://github.com/rakudo/rakudo/blob/nom/lib/Test.pm>
     perl6 -e "use Test; use aeflkaje;" && echo "OK"
     perl6 --ll-exception -e "use Test; use aeflkaje;" && echo "OK"
 
+=head3 Segmentation fault!
+
+Use the C<--boring> option. This works around a bug that appears to be caused by rakudo's threads.
+
 =head1 INCLUDED TOOLS
 
 =head2 Zef::Net::HTTP
@@ -296,20 +275,6 @@ HTTP library interfaces and Grammars.
 
     my $response = $client.get("https://www.google.com");
     say $reponse.content; # returns $.body with encoding/chunked/etc applied
-
-or build your own client by satisfying the interface requirements during object construction:
-
-    use Zef::Net::HTTP::Client;
-
-    use Different::Responder;
-    use Different::Requestor;
-    use You::Get::The::Idea;
-
-    Zef::Net::HTTP::Client.new(
-        responder   => Different::Responder, # HTTP::Response
-        requestor   => Different::Requestor, # HTTP::Request
-        transporter => You::Get::The::Idea   # HTTP::Transport
-    );
 
 =head1 NOTES
 
