git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "4801399"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "4801399"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/perl6/doc/lib/Language/5to6-perlop.pod
+++ b/perl6/doc/lib/Language/5to6-perlop.pod
@@ -42,8 +42,8 @@ L<5to6-perlfunc.pod>. Parentheses are still used for grouping.
 As you typically will not be using references in Perl 6, the arrow is
 probably less useful as a dereferencing operator. If you do need to
 dereference something, however, the arrow is the dot. It is also the dot
-for method calls. So, Perl 5's C<$arrayref->[7]> becomes
-C<$arrayref.[7]> in Perl 6 and, similarly, C<$user->name> becomes
+for method calls. So, Perl 5's C<< $arrayref->[7] >> becomes
+C<$arrayref.[7]> in Perl 6 and, similarly, C<< $user->name >> becomes
 C<$user.name>. The C<< => >> arrow is used for constructing Pairs, see
 L<http://doc.perl6.org/language/terms#Pair>.
 
