--- a/perl6/doc/lib/Language/functions.pod
+++ b/perl6/doc/lib/Language/functions.pod
@@ -348,7 +348,7 @@ sub circumfix:<START END>(*@elems) {
 }
 
 say START 'a', 'b', 'c' END;        # start a b c end
-=end code;
+=end code
 
 Postcircumfixes also receive the term after which they are parsed as
 an argument:
@@ -392,7 +392,7 @@ use C<is equiv(&other-operator)> instead.
 =head2 Associativity
 
 When the same operator appears several times in a row, there are multiple
-possible interpretation. For example
+possible interpretations. For example
 
     1 + 2 + 3
 
