--- a/perl6/doc/lib/Language/modules.pod
+++ b/perl6/doc/lib/Language/modules.pod
@@ -219,8 +219,7 @@ To share your module, do the following:
     =item Regarding the C<LICENSE> file, if you have no other preference,
     you might just use the same one that Rakudo Perl 6 uses. Just
     copy/paste the raw form of L<its license|https://github.com/rakudo/rakudo/blob/nom/LICENSE>
-    into your own C<LICENSE> file, and change C<"The Perl Foundation">
-    in the document to your name or the name of your company.
+    into your own C<LICENSE> file.
 
     =item If you don't yet have any tests, you can leave out the C<t>
     directory and C<basic.t> file for now. For more info on how to write
