--- a/perl6/doc/lib/Type/Attribute.pod
+++ b/perl6/doc/lib/Type/Attribute.pod
@@ -58,6 +58,12 @@ Returns C<True> if the attribute has a public accessor method.
 Returns C<True> for readonly attributes, which is the default.
 Returns C<False> for attributes marked as C<is rw>.
 
+=head2 method type
+
+    method type(Attribute:D:) returns Mu
+
+Returns the type constraint of the attribute.
+
 =head2 method get_value
 
     method get_value(Attribute:D: Mu $instance)
