--- a/perl6/doc/lib/Type/IO/Socket/Async.pod
+++ b/perl6/doc/lib/Type/IO/Socket/Async.pod
@@ -16,17 +16,14 @@ that listens on port 3333:
 =begin code
 use v6;
 
-my $supply = IO::Socket::Async.listen('localhost',3333);
-
-$supply.tap(-> $conn { 
-    my $bs = $conn.bytes-supply;
-    $bs.tap(-> $buf { await $conn.write: $buf } );
-    $bs.wait;
-    $conn.close;
-});
-
-$supply.wait;
-
+react {
+    whenever IO::Socket::Async.listen('localhost',3333) -> $conn {
+        my $bs = $conn.bytes-supply;
+        $bs.tap(-> $buf { await $conn.write: $buf } );
+        $bs.wait;
+        $conn.close;
+    }
+}
 =end code
 
 And a client that connects to it, and prints out what the server answers:
@@ -35,14 +32,18 @@ And a client that connects to it, and prints out what the server answers:
 use v6;
 
 await IO::Socket::Async.connect('localhost',3333).then( -> $p {
-	if $p.status == Kept {
-		my $conn = $p.result;
-		my $p2 = $conn.send('Hello, Perl 6');
-		my $p3 = Promise.new;
-		$conn.chars-supply.tap(-> $str { say $str; $p3.keep});
-		await $p3;
-		$conn.close;
-	}
+    if $p.status {
+        given $p.result {
+            .print('Hello, Perl 6');
+            react {
+                whenever .chars-supply() -> $v {
+                    $v.say;
+                    done;
+                }
+            }
+            .close;
+        }
+    }
 });
 =end code
 
