--- a/perl6/doc/lib/Type/Iterable.pod
+++ b/perl6/doc/lib/Type/Iterable.pod
@@ -41,7 +41,7 @@ For example
 because C<< <a b> >> is a L<List|/type/List> and thus iterable, so
 C<< (<a b>, 'c').flat >> returns C<('a', 'b', 'c')>, which has three elems.
 
-Note that the flatenning is recursive, so C<((("a", "b"), "c"), "d").flat>
+Note that the flattening is recursive, so C<((("a", "b"), "c"), "d").flat>
 returns C<("a", "b", "c", "d")>, but it does not flatten itemized sublists:
 
     say ($('a', 'b'), 'c').perl;    # ($("a", "b"), "c").Seq
@@ -57,7 +57,7 @@ Returns a lazy iterable wrapping the invocant.
     method hyper(Int(Cool) :$batch = 64, Int(Cool) :$degree = 4)
                 returns Iterable
 
-Returns another Iterable that is pontetially iterated in parallel, with a
+Returns another Iterable that is potentially iterated in parallel, with a
 given batch size and degree of parallelism.
 
 The order of elements are preserved.
@@ -67,7 +67,7 @@ The order of elements are preserved.
     method race(Int(Cool) :$batch = 64, Int(Cool) :$degree = 4)
                 returns Iterable
 
-Returns another Iterable that is pontetially iterated in parallel, with a
+Returns another Iterable that is potentially iterated in parallel, with a
 given batch size and degree of parallelism.
 
 Unlike C<hyper>, C<race> does not preserve the order of elements.
