--- a/perl6/doc/lib/Type/List.pod
+++ b/perl6/doc/lib/Type/List.pod
@@ -119,29 +119,33 @@ the return values are accessed.
 Examples:
 
     > ('hello', 1, 22/7, 42, 'world').map: { .WHAT.perl }
-    Str Int Rat Int Str
+    (Str Int Rat Int Str)
     > map *.Str.chars, 'hello', 1, 22/7, 42, 'world'
-    5 1 8 2 5
+    (5 1 8 2 5)
 
-C<map> inspects the arity of the code object, and tries to pass as many arguments to it as expected:
+C<map> inspects the arity of the code object, and tries to pass as many
+arguments to it as expected:
 
     sub b($a, $b) { "$a before $b" };
     say <a b x y>.map(&b).join(', ');   # a before b, x before y
 
 iterates the list two items at a time.
 
-Note that C<map> does not flatten embedded lists and array, so
+Note that C<map> does not flatten embedded lists and arrays, so
 
     ((1, 2), <a b>).map({ .join(',')})
 
-passes C<(1, 2)> and C<< <a b> >> in turn to the block, leading to a total of two iterations and the result list C<"1,2", "a,b">. See L<method flatmap|#method flatmap> for an alternative that flattens.
+passes C<(1, 2)> and C<< <a b> >> in turn to the block, leading to a total
+of two iterations and the result list C<"1,2", "a,b">.
+See L<method flatmap|#method flatmap> for an alternative that flattens.
 
 =head2 method flatmap
 
     method flatmap(List:D: &code) returns List:D
 
 Like C<map> iterates over the elements of the invocant list, feeding each
-element in turn to the code reference, and assembling the return values from these invocations in a result list.
+element in turn to the code reference, and assembling the return values from
+these invocations in a result list.
 
 Unlike C<map> it flattens non-itemized lists and arrays, so
 
