--- a/perl6/doc/lib/Type/PositionalBindFailover.pod
+++ b/perl6/doc/lib/Type/PositionalBindFailover.pod
@@ -18,8 +18,8 @@ write:
     }
     say fifths($seq);       # 5
 
-The invocation of C<fifths> in the example above would oridinarly give a type
-error, because C<$seq> is of type L<Seq|/type/Seq>, whhich doesn't do the
+The invocation of C<fifths> in the example above would ordinarily give a type
+error, because C<$seq> is of type L<Seq|/type/Seq>, which doesn't do the
 L<Positional|/type/Positional> interface that the C<@>-sigil implies.
 
 But the signature binder recognizes that C<Seq> does the
