--- a/perl6/doc/lib/Language/operators.pod
+++ b/perl6/doc/lib/Language/operators.pod
@@ -1367,14 +1367,14 @@ Zip operator.
 Interleaves the lists passed to C<Z> like a zipper, stopping as soon as
 the first input list is exhausted:
 
-    say (1, 2 Z <a b c> Z <+ ->).perl;  # ((1, "a", "+"), (2, "b", "-")).list
+    say (1, 2 Z <a b c> Z <+ ->).perl;  #=> ((1, "a", "+"), (2, "b", "-")).Seq
 
 The C<Z> operator also exists as a meta operator, in which case the inner
 lists are replaced by the value from applying the meta'ed operator to the
 list:
 
-    say 100, 200 Z+ 42, 23;             # 142, 223
-    say 1..3 Z~ <a b c> Z~ 'x' xx 3;    # 1ax 2bx 3cx
+    say 100, 200 Z+ 42, 23;             #=> (142 223)
+    say 1..3 Z~ <a b c> Z~ 'x' xx 3;    #=> (1ax 2bx 3cx)
 
 =head2 infix C«X»
 
@@ -1384,18 +1384,16 @@ Creates a cross product from all the lists, order so that the rightmost
 elements vary most rapidly
 
     1..3 X <a b c> X 9
-    # produces   (1, 'a', 9), (1, 'b', 9), (1, 'c', 9),
-                 (2, 'a', 9), (2, 'b', 9), (2, 'c', 9),
-                 (3, 'a', 9), (3, 'b', 9), (3, 'c', 9)
+    # produces ((1 a 9) (1 b 9) (1 c 9)
+    #           (2 a 9) (2 b 9) (2 c 9)
+    #           (3 a 9) (3 b 9) (3 c 9))
 
 The C<X> operator also exists as a meta operator, in which case the inner
 lists are replaced by the value from applying the meta'ed operator to the
 list:
 
     1..3 X~ <a b c> X~ 9
-    # produces   '1a9', '1b9', '1c9',
-                 '2a9', '2b9', '2c9',
-                 '3a9', '3b9', '3c9'
+    # produces (1a9 1b9 1c9 2a9 2b9 2c9 3a9 3b9 3c9)
 
 =head2 infix C«...»
 
