--- a/jdv/p6-data-selector/Changes
+++ b/jdv/p6-data-selector/Changes
@@ -1,2 +1,6 @@
 1.00 - 2015-09-08
  - Initial versioned dist form.
+1.01 - 2015-09-13
+ - Bump version to test cpan p6 indexer.
+1.02 - 2015-09-16
+ - Bump version to test cpan p6 indexer again.
